ModifyUser returns loginSession instead of confirmation code to be similar to auth API. Resetting login session after the modifying email. Missed SignIn error handling.
